PUSH: 无人机协会/无人机安全防护解决方案2/框架.md

--- a/无人机协会/无人机安全防护解决方案2/框架.md
+++ b/无人机协会/无人机安全防护解决方案2/框架.md
@@ -13,7 +13,7 @@
 - [ ] 研究一下子森师哥推荐的平台
 - [ ] 需要确保上次出现的问题90%都解决了（⭐⭐）
 - [x] 需要一份市场调研——相关竞品真实售价、材料
-- [ ] 需要了解一下先讲哪部分再讲哪部分，怎么衔接这方面（⭐⭐）
+- [x] 需要了解一下先讲哪部分再讲哪部分，怎么衔接这方面（⭐⭐）
 - [ ] 关于招募人员问题，在期末结束或者在路演结束有时间就去了解外观方面的专业（服装设计与工程、材料功能等专业），然后子森师哥说一声
 - [ ] 产品研发需要着重推进一下
     - [ ] 材料问题
